corrections on balise footer + flex align items

--- a/app/Components/Footer/style.scss
+++ b/app/Components/Footer/style.scss
@@ -4,8 +4,9 @@
 .lien {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 3rem;
-    
+
     background-color: black;
     color: white;
 
